--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -11,7 +11,7 @@
 
 * {
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 0rem;
   margin: 0.5rem;
 }
 
@@ -28,7 +28,7 @@ body {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
-  padding: 0 2rem;
+  padding:  2rem;
   text-align: center;
 }
 
@@ -57,6 +57,7 @@ body {
 
 .header h1 {
   margin-bottom: 1rem;
+ 
 }
 
 .score {
@@ -64,17 +65,10 @@ body {
   grid-template-columns: repeat(2, 1fr);
   font-size: 1.2rem;
   color: #fff;
+  background: var(--dark-color);
+  border-radius: 10px;
+  grid-gap: 2rem;
   
-}
-
-.score p:first-child {
-  background: var(--dark-color);
-  border-radius: 10px;
-}
-
-.score p:last-child {
-  background: var(--dark-color);
-  border-radius: 10px;
 }
 
 .choices {
@@ -101,49 +95,14 @@ body {
   color: var(--lose-color);
 }
 
-.modal {
+.message {
   display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.modal-content {
-  background: #fff;
+  grid-template-columns: repeat(1, 1fr);
   text-align: center;
-  margin: 10% auto;
-  width: 350px;
-  border-radius: 10px;
-  padding: 3rem;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
-  animation-name: modalopen;
-  animation-duration: var(--modal-duration);
+  margin: 2rem 35rem;
+  background: #fff;
+  grid-gap: 2rem;
 }
-
-.modal-content h1 {
-  margin-bottom: 1rem;
-}
-
-.modal-content p {
-  font-size: 1.2rem;
-  margin-top: 1rem;
-}
-
-@keyframes modalopen {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
 
 @media (max-width: 700px) {
   .choice {
