--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
 :root {
   --primary-color: #003699;
@@ -16,19 +16,18 @@
 }
 
 body {
-  font-family: 'American Typewriter', serif;
+  font-family: "American Typewriter", serif;
   line-height: 1.6;
   background: #fff;
   color: #333;
   background-image: url("blue.png");
-  
 }
 
 .container {
   max-width: 1100px;
   margin: auto;
   overflow: hidden;
-  padding:  2rem;
+  padding: 2rem;
   text-align: center;
 }
 
@@ -36,7 +35,7 @@ body {
   display: none;
   background: var(--dark-color);
   color: #fff;
-  font-family: 'American Typewriter', serif;
+  font-family: "American Typewriter", serif;
   padding: 0.4rem 1.3rem;
   font-size: 1rem;
   cursor: pointer;
@@ -57,7 +56,6 @@ body {
 
 .header h1 {
   margin-bottom: 1rem;
- 
 }
 
 .score {
@@ -68,7 +66,6 @@ body {
   background: var(--dark-color);
   border-radius: 10px;
   grid-gap: 2rem;
-  
 }
 
 .choices {
@@ -99,7 +96,7 @@ body {
   display: none;
   grid-template-columns: repeat(1, 1fr);
   text-align: center;
-  margin: 2rem 35rem;
+  margin: 2rem 40rem;
   background: #fff;
   grid-gap: 2rem;
 }
