--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -96,9 +96,9 @@ body {
   display: none;
   grid-template-columns: repeat(1, 1fr);
   text-align: center;
-  margin: 2rem 40rem;
+  margin: 2px 25px;
   background: #fff;
-  grid-gap: 2rem;
+  grid-gap: 5rem;
 }
 
 @media (max-width: 700px) {
